Add first minigame
